# search_engine

./: CMakeLists.txt  README.md  engine_API.md  engine_settings.md
examples/: Usage.txt  eample_usage.md
examples/1/: config.json  requests.json
examples/1/Annotations/: 12 Angry men.txt  Fight Club.txt  Forrest Gump.txt  Il buono, il brutto, il cattivo.txt  Inception.txt  Pulp Fiction.txt  Schindler's List.txt  The Dark Knight.txt  The Godfather part II.txt  The Godfather.txt  The Lord of the Rings The Fellowship of the Ring.txt  The Lord of the Rings The Return of the King.txt  The Shawshank Redemption.txt
examples/2/: Sample 1.txt  Sample 2.txt  Sample 3.txt  config.json  requests.json
examples/3/: config.json  requests.json
examples/4/: empty.json  gui_config.json
examples/5/: Imdb top 250.json
examples/6/: tests.json
examples/7/: cyrilics.json
examples/8/: special symbols.json
gui/: CMakeLists.txt
gui/include/: FilePipes.h  GUIWindow.h  ProcessPipe.h  RemoteConfig.h  gui.h  gui.ui
gui/src/: FilePipes.cpp  GUIWindow.cpp  ProcessPipe.cpp  RemoteConfig.cpp  main.cpp
gui/tests/: CMakeLists.txt  TestRemoteConfig.cpp
include/: ConsoleUI.h  ConverterJSON.h  DebugMessages.h  DocInfoStruct.h  GlobalLocks.h  HTTPTextFetcher.h  InvertedIndex.h  PathHelper.h  RelativeIndex.h  SearchEngine.h
shared/include/: FilePipes.h  HTTPTextFetcher.h  PathHelper.h
shared/src/: FilePipes.cpp  HTTPTextFetcher.cpp  PathHelper.cpp
src/: ConverterJSON.cpp  HTTPTextFetcher.cpp  InvertedIndex.cpp  PathHelper.cpp  SearchEngine.cpp  main.cpp
tests/: CMakeLists.txt  TestHTTPTextFetcher.cpp  TestHelper.cpp  TestHelper.h  TestInvertedIndex.cpp  TestPathHelper.cpp  TestSearchEngine.cpp  TestWordsSplit.cpp
